Fixed graph alignment

--- a/app/assets/stylesheets/new_common/mapviews-graph.css.scss
+++ b/app/assets/stylesheets/new_common/mapviews-graph.css.scss
@@ -11,7 +11,7 @@
   bottom: 0;
   left: 0;
   right: 0;
-  padding: 22px 12px 0 12px;
+  padding: 22px 16px 0 16px;
   background: -moz-linear-gradient(bottom,  rgba(0,0,0,0.5) 0%, rgba(0,0,0,0.1) 70%, rgba(0,0,0,0.0) 100%);
   background: -webkit-gradient(linear, left bottom, left top, color-stop(0%,rgba(0,0,0,0.5)), color-stop(70%,rgba(0,0,0,0.1)), color-stop(100%,rgba(0,0,0,0.0)));
   background: -webkit-linear-gradient(bottom,  rgba(0,0,0,0.5) 0%, rgba(0,0,0,0.1) 70%, rgba(0,0,0,0.0) 100%);
